<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="112dp"
    android:background="#3C3C3C"
    android:orientation="vertical">

    <!--  Luminosity field -->
    <TextView
        android:id="@+id/text_lumen_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/if_lumen_text"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/lumen_less_than"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/less_than"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

        <RadioButton
        android:id="@+id/lumen_more_than"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_or_equal"
        android:textColor="@android:color/white"
        app:buttonTint="@android:color/white" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_choose_lumen_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"

        android:layout_marginRight="64dp"
        android:theme="@style/TextInputStyle"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextInputHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_choose_luminosity_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_lumen_hint"
            android:textColor="@android:color/white"
            android:textColorHint="#898989"
            android:textColorLink="@android:color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>